The common Makefile now includes a debugging target and was moved to a new folder

--- a/tools/common/Makefile
+++ b/tools/common/Makefile
@@ -1,14 +1,19 @@
 # Compiler settings
 CC     = g++
-CFLAGS = -Wall -O3
+CFLAGS = -Wall
+RFLAGS = -O3
+DFLAGS = -g
 
 # Custom include paths and library names (space separated)
-INC    = 
-LIBS   = 
+INC  = 
+LIBS = 
 
 # Path settings
 SRC_ROOT = .
 OUTFILE  = $(shell basename `pwd`)
+
+# Debugger settings
+DBG = ddd
 
 # Automagically find all source files, header files, and include directories
 SRC_C=$(shell find ${SRC_ROOT} -name *cpp -type f)
@@ -19,13 +24,24 @@ DIR_H=$(sort ${foreach FILE_H,${SRC_H},$(dir ${FILE_H})})
 INC_STR=$(addprefix -I,${INC} $(DIR_H))
 LIB_STR=$(addprefix -l,$(LIBS))
 
-# Compile target
+# Set release flags as default
+CFLAGS += $(RFLAGS)
+
+# Compile target (default)
 ${OUTFILE}: ${SRC_C} ${SRC_H}
 	${CC} -o ${OUTFILE} ${CFLAGS} ${LIB_STR} ${INC_STR} ${SRC_C}
 
 # Execution target
+.PHONY: run
 run: ${OUTFILE}
 	@./${OUTFILE}
+
+# Debug target
+.PHONY: debug
+debug: CFLAGS := $(subst $(RFLAGS),$(DFLAGS),$(CFLAGS))
+debug: clean ${OUTFILE}
+	${DBG} ${OUTFILE}
+	make clean
 
 # Clean target
 .PHONY: clean
