Input: Enabled magic-space for history expansion with "!nr <space>"

--- a/home/.inputrc
+++ b/home/.inputrc
@@ -31,5 +31,12 @@
 "\eOC": forward-word
 
 #
+# Use magic-space for history expansion (!nr <space>)
+#
+$if Bash
+    Space: magic-space
+$endif
+
+#
 # end
 #
