--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -15,6 +15,7 @@
 [merge]
 	tool = meld4
 	conflictstyle = diff3
+	ff = false
 [mergetool "meld4"]
 	cmd = ~/tools/meld-1.6.1/bin/meld --diff $BASE $LOCAL --diff $BASE $REMOTE --diff $LOCAL $BASE $REMOTE $MERGED
 [cola]
@@ -26,3 +27,7 @@
 [core]
 	whitespace = -trailing-space
 	preloadindex = true
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean %f
+	smudge = git-lfs smudge %f
