.gitconfig: Updated the lfs aliases

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -28,6 +28,7 @@
 	whitespace = -trailing-space
 	preloadindex = true
 [filter "lfs"]
+	smudge = git-lfs smudge -- %f
 	required = true
-	clean = git-lfs clean %f
-	smudge = git-lfs smudge %f
+	clean = git-lfs clean -- %f
+	process = git-lfs filter-process
