--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -1,7 +1,7 @@
 [color]
 	ui = auto
 [push]
-	default = tracking
+	default = upstream
 [branch]
 	autosetuprebase = always
 [gui]
@@ -17,7 +17,7 @@
 	conflictstyle = diff3
 	ff = false
 [mergetool "meld4"]
-	cmd = ~/tools/meld-1.6.1/bin/meld --diff $BASE $LOCAL --diff $BASE $REMOTE --diff $LOCAL $BASE $REMOTE $MERGED
+	cmd = meld --diff $BASE $LOCAL --diff $BASE $REMOTE --diff $LOCAL $BASE $REMOTE $MERGED
 [cola]
 	fontdiff = DejaVu Sans Mono,12,-1,5,50,0,0,0,0,0
 [alias]
@@ -32,3 +32,5 @@
 	required = true
 	clean = git-lfs clean -- %f
 	process = git-lfs filter-process
+[user]
+	name = Fabian Schenkel
