Tmux: Updated tmux settings

--- a/home/.tmux.conf
+++ b/home/.tmux.conf
@@ -1,4 +1,8 @@
 set -g history-limit 50000
 set -g aggressive-resize on
+# Funzt direkt in Session: set-window-option -g window-status-current-style fg=green,bg=black
+set-window-option -g window-status-current-style fg=green,bg=black
+set -g base-index 1
+setw -g pane-base-index 1
 
 new-session -s main
